--- a/entrypoints/sidepanel/index.html
+++ b/entrypoints/sidepanel/index.html
@@ -19,6 +19,9 @@
     <meta name="manifest.exclude" content="['chrome', ...]" /> -->
   </head>
   <body>
-		
+		<body>
+			<div id="root"></div>
+			<script type="module" src="./main.tsx"></script>
+		</body>	
   </body>
 </html>
