--- a/entrypoints/sidepanel/index.html
+++ b/entrypoints/sidepanel/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Default Side Panel Title</title>
+		<link rel="stylesheet" href="~/assets/index.css">
     <!-- <meta
       name="manifest.default_icon"
       content="{
