--- a/entrypoints/sidepanel/index.html
+++ b/entrypoints/sidepanel/index.html
@@ -3,26 +3,13 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Default Side Panel Title</title>
+    <title>Default Sidepanel Title</title>
+    <meta name="manifest.type" content="browser_action" />
 		<link rel="stylesheet" href="~/assets/index.css">
-    <!-- <meta
-      name="manifest.default_icon"
-      content="{
-        16: '/16.png',
-        24: '/24.png',
-        ...
-      }"
-    /> -->
-    <!-- <meta name="manifest.open_at_install" content="true|false" />
-    <meta name="manifest.browser_style" content="true|false" /> -->
-    <!-- Set include/exclude if the page should be removed from some builds -->
-    <!-- <meta name="manifest.include" content="['chrome', ...]" />
-    <meta name="manifest.exclude" content="['chrome', ...]" /> -->
+		<!-- <link rel="stylesheet" href="style.css"> -->
   </head>
   <body>
-		<body>
-			<div id="root"></div>
-			<script type="module" src="./main.tsx"></script>
-		</body>	
+    <div id="root"></div>
+    <script type="module" src="./main.tsx"></script>
   </body>
 </html>
