--- a/entrypoints/popup/index.html
+++ b/entrypoints/popup/index.html
@@ -8,7 +8,7 @@
 		<link rel="stylesheet" href="~/assets/index.css">
 		<!-- <link rel="stylesheet" href="style.css"> -->
   </head>
-  <body>
+  <body class="popup">
     <div id="root"></div>
     <script type="module" src="./main.tsx"></script>
   </body>
